--- a/project/src/components/IdeaCard/IdeaCard.module.css
+++ b/project/src/components/IdeaCard/IdeaCard.module.css
@@ -4,18 +4,18 @@
   display: flex;
   justify-content: space-around;
 }
-/* .rate {
-  position: absolute; 
-  z-index: 0;
-} */
 
-.star {
- position: absolute; 
- top: 0;
+.rate {
+  position: absolute; 
+  bottom: 1rem;
+  left: 2rem;
   z-index: 0;
 }
 
-.asd {
- position: relative; 
-  
+.star {
+  position: relative; 
+}
+
+.description {
+  display: flex;
 }
