--- a/project/src/components/CategoryList/CategoryList.module.css
+++ b/project/src/components/CategoryList/CategoryList.module.css
@@ -4,12 +4,14 @@
   font-size: 60px;
   display: flex;
   flex-direction: column;
-  background-image: url(http://www.allwhitebackground.com/images/8/4K-Christmas-Wallpaper-3840x2160-40679.jpg) ;
+  width: 100%;
+  background-image: url(https://images.wallpaperscraft.ru/image/rozhdestvenskaia_elka_novyj_god_rozhdestvo_130928_1920x1080.jpg) ;
   background-repeat: no-repeat;
   background-size: cover;
   color: white;
-  min-width: 100vw;
+  /* min-width: 100vw; */
   min-height: 100vh;
+  width: 100%;
 }
 
 .main h1 {
