--- a/project/src/components/CarouselList/CarouselList.module.css
+++ b/project/src/components/CarouselList/CarouselList.module.css
@@ -3,5 +3,6 @@ border-width: 1px;
     border-color: #0b0c0e;
     background-color: #eeeeee;
     margin-top: -15px;
+    margin-bottom: 2px;
     border-radius: 5px;
 }
