--- a/project/src/components/NavBar/NavBar.module.css
+++ b/project/src/components/NavBar/NavBar.module.css
@@ -1,5 +1,6 @@
 .bar{
-  background-color: #B6B89F;
+  background-color: #b6b89fa2;
+  /* background-color: rgba(214, 173, 95, 0.4); */
   width: 100%;
 }
 
@@ -7,4 +8,10 @@
 display: flex;
 /* align-items: stretch; */
 justify-content: space-between;
+}
+
+
+
+Nav{
+  font-weight: bolder;
 }
