--- a/project/src/components/IdeaCard/IdeaCard.module.css
+++ b/project/src/components/IdeaCard/IdeaCard.module.css
@@ -1,6 +1,6 @@
 .card {
-  /* background-color: rgba(214, 173, 95, 0.4); */
-  background-color: #b6b89fa2;
+  background-color: rgba(214, 173, 95, 0.4);
+  /* background-color: #D6AD5F; */
 
   margin: 7px 5px;
   width: 250px;
