--- a/project/src/components/ButtonDeleteList/ButtonDeleteList.module.css
+++ b/project/src/components/ButtonDeleteList/ButtonDeleteList.module.css
@@ -3,14 +3,13 @@
     width: 150px;
     height: 40px;
     border: #4aa5ff;
-    background: #ff0000;
+    background: #ad1111;
     float: right;
     text-align: center;
     margin-top: -7px;
     color: white;
     border-radius: 5%;
-
-
+    padding: 8px;
 }
 .button:hover{
     background: #1e7e34;
