--- a/project/src/components/CarouselList/CarouselList.module.css
+++ b/project/src/components/CarouselList/CarouselList.module.css
@@ -1,5 +1,5 @@
 .item{
-border-width: 1px;
+    border-width: 1px;
     border-color: #0b0c0e;
     background-color: #eeeeee;
     margin-top: -15px;
@@ -9,4 +9,15 @@ border-width: 1px;
 
 .carousel {
   display: flex;
+  align-items: center;
+  background-color: #DADCCB;
+  /* background-color: rgba(214, 173, 95, 0.4); */
+
+  margin-top: 50px;
+  padding: 5px;
+}
+
+p {
+  font-size: 25px;
+  text-align: center;
 }
